--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,10 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<a href="/">ホーム</a>
+		<a href="/about/">概要</a>
+		<a href="/blog/">ブログ</a>
+	
+		<h1>私のAstroサイト</h1>
 	</body>
 </html>
